@@ -7,7 +7,7 @@ rem JVM arguments - remote debug argument
 set "JAVA_OPTS=%JAVA_OPTS% -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005"
 
 rem JVM arguments - GC options. using parallel CPU(s) for young gen & concurent mark and sweep for old gen
-set "JAVA_OPTS=%JAVA_OPTS% -XX:+UseParNewGC -XX:+UseConcMarkSweepGC"
+set "JAVA_OPTS=%JAVA_OPTS% -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:-PrintGCDetails -Xloggc:../logs/gc.log -XX:-UseGCLogFileRotation"
 
 rem JVM arguments - enable jmx remote access
 set "JAVA_OPTS=%JAVA_OPTS% -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=9010 -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false
